@@ -141,9 +141,6 @@
                 <version>3.8.0</version>
                 <configuration>
                     <release>15</release>
-                    <compilerArgs>
-                        --enable-preview
-                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
